--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
+apply plugin: 'realm-android'
 
 android {
     compileSdkVersion 27
@@ -34,6 +36,7 @@ dependencies {
     testImplementation 'org.robolectric:robolectric:3.0'
     testImplementation 'org.robolectric:shadows-support-v4:3.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'io.realm:android-adapters:2.1.1'
 }
 repositories {
     mavenCentral()
